[project]
name = "shapley-dp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "medmnist>=3.0.2",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
